WSTATS: fix ugly layout of key events on mobile

--- a/css/wstats.css
+++ b/css/wstats.css
@@ -14,6 +14,9 @@ h2 a, h3 a {
 	align-content: stretch;
 	gap: 1em;
 }
+#ws-last-alsius, #ws-last-ignis, #ws-last-syrtis {
+	min-width: 15em;
+}
 #ws-forts { grid-area: forts }
 #ws-gems { grid-area: gems }
 #ws-invasions { grid-area: invasions }
